--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "planner",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "@tabler/icons": "^3.3.0",
+    "@tabler/icons-react": "^3.3.0",
     "@types/uuid": "^9.0.7",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "use-local-storage": "^3.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
