--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "planner",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@stitches/react": "^1.2.8",
-    "@tabler/icons": "^3.3.0",
-    "@tabler/icons-react": "^3.3.0",
-    "@types/uuid": "^9.0.7",
-    "next": "^14.0.4",
-    "react": "^18",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18",
-    "use-local-storage": "^3.0.0",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-beautiful-dnd": "^13.1.7",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "daisyui": "^4.4.23",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "planner",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^5.0.0",
+		"@stitches/react": "^1.2.8",
+		"@tabler/icons": "^3.3.0",
+		"@tabler/icons-react": "^3.3.0",
+		"@types/uuid": "^9.0.7",
+		"next": "^14.0.4",
+		"react": "^18",
+		"react-beautiful-dnd": "^13.1.1",
+		"react-day-picker": "^9.6.4",
+		"react-dom": "^18",
+		"react-hook-form": "^7.55.0",
+		"use-local-storage": "^3.0.0",
+		"uuid": "^9.0.1",
+		"yup": "^1.6.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-beautiful-dnd": "^13.1.7",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"daisyui": "^5.0.9",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
