--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-select": "^2.1.7",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.7",
+		"@radix-ui/react-tooltip": "^1.2.3",
 		"@supabase/ssr": "latest",
 		"@supabase/supabase-js": "latest",
 		"@tabler/icons": "^3.31.0",
